--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity"
     >
+    <TextView
+        android:id="@+id/mainHeader"
+        android:layout_height="80dp"
+        android:layout_width="match_parent"
+        android:background="@color/app_name"
+        android:textSize="50sp"
+        android:text="@string/app_name"
+        />
+
+    <LinearLayout
+        android:id="@+id/button_div"
+        android:layout_height="80dp"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:background="@color/button_pallete"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/add_button"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_margin="10sp"
+            android:background="@color/white"
+            android:text="@string/add_button"
+
+            />
+
+        <Button
+            android:id="@+id/delete_button"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_margin="10sp"
+            android:background="@color/white"
+            android:text="@string/remove_button"
+
+            />
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/city_list"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        ></ListView>
+        android:layout_height="600dp" />
+
+    <LinearLayout
+        android:id="@+id/input_div"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal"
+        android:background="@color/optional_bar"
+        android:gravity="center"
+        android:visibility="invisible"
+        >
+        <EditText
+            android:id="@+id/edit_text"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:background="@color/white"
+            android:layout_margin="10dp"
+            android:hint="@string/edit_view_hint"
+            />
+        <Button
+            android:id="@+id/add_entry"
+            android:layout_width="100dp"
+
+            android:layout_height="60dp"
+            android:layout_margin="10sp"
+            android:background="@color/white"
+            android:text="@string/add_entry"
+
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
